# libBlockCompression

./: CMakeLists.txt  README.md
BlockCompression/: BlockCompression.cpp  BlockCompression.h  CMakeLists.txt  deffile.def  quicklz.h
QuickLZ/: CMakeLists.txt
